--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,11 @@
     "@types/react-dom": "^19.1.2",
     "astro": "^5.7.4",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "^19.1.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
     "tailwindcss": "^4.1.4"
   }
 }
