--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.2.4",
+    "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/vite": "^4.1.4",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "astro": "^5.7.4",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.1",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
