--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,18 +11,20 @@
   "dependencies": {
     "@astrojs/react": "^4.2.4",
     "@hookform/resolvers": "^5.0.1",
-    "@tailwindcss/vite": "^4.1.4",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "astro": "^5.7.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.1",
-    "zod": "^3.24.3"
+    "react-router-dom": "^6.30.0",
+    "zod": "^3.24.3",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.4"
+    "@astrojs/tailwind": "^6.0.2",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.0"
   }
 }
