committing latest changes

--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@
 DATABASE_URL="file:dev.db"
 
 # News API configuration
-NEWS_API_KEY="d5215bd99e1a4c509d36bb83ae0089e4"
+NEWS_API_KEY=d5215bd99e1a4c509d36bb83ae0089e4
 
 # Server configuration
 PORT=3000
