--- a/backend/.env
+++ b/backend/.env
@@ -2,9 +2,9 @@
 DATABASE_URL="file:dev.db"
 
 # News API configuration
-NEWS_API_KEY=d5215bd99e1a4c509d36bb83ae0089e4
+NEWS_API_KEY=your-key
 
 # Server configuration
 PORT=3000
 
-JWT_SECRET=newsfeed-dev-secret-2025
+JWT_SECRET=your-secret
